--- a/config/config.json
+++ b/config/config.json
@@ -19,10 +19,15 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "your_db_username",
-    "password": "your_db_password",
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "username": "profile_opus_user",
+    "password": "OV4YrGE31AbeHNSwBaFTao4K9SGbGuA6",
+    "database": "profile_opus",
+    "host": "dpg-croifi08fa8c738s9u70-a.oregon-postgres.render.com",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true
+      }
+    }
   }
 }
